--- a/src/css/app.css
+++ b/src/css/app.css
@@ -13,7 +13,9 @@
   width: 376px;
   height: 666px;
   z-index: 100;
-
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   background: white;
   border-radius: 3px;
   box-shadow: 0 0 5px 0 rgba(0, 0, 0, .9);
@@ -22,5 +24,13 @@
 
 #app .container-view {
   padding: 20px;
+  flex: 1 1 auto;
+}
+
+#app .container-view-heading {
+  text-align: center;
+  font: caption;
+  font-weight: 800;
+  text-transform: uppercase;
 }
 
