--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,7 +1,7 @@
 header {
   height: 40px;
-  margin: 0 auto;
-  padding: 20px 0;
+  margin: 2vh;
+  padding: 2vh;
   text-align: center;
   box-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
 }
