--- a/src/css/body.css
+++ b/src/css/body.css
@@ -1,8 +1,10 @@
+@import "https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap";
+
 html, body, h1, h2, h3, ul, li {
   margin: 0;
   padding: 0;
   border: 0;
-  font: inherit;
+  font-family: "Roboto", sans-serif;
   font-size: 100%;
 }
 
